tests/miniJava/neg/006179_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { String while ( 0 ) { } } }
